[tool.poetry]
name = "mp-bot"
version = "0.1.0"
description = "a simple bot for digging in a popular online browser game"
authors = ["Tyson Maly"]

[tool.poetry.dependencies]
python = "^3.10"
PyAutoGUI = "^0.9.53"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
